--- a/website/style/style.css
+++ b/website/style/style.css
@@ -68,6 +68,7 @@ header {
     padding: 1rem;
     margin-top: 5rem;
     border-left: 2px solid white;
+    margin-left: 2rem;
     background-color: #12232e;
 }
     
@@ -89,7 +90,6 @@ blockquote {
 .dropbtn {
     color: white;
     background-color: #007cc7;
-    padding: 16px;
     font-size: 16px;
     border: none;
   }
@@ -129,7 +129,7 @@ blockquote {
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {      
       border-radius: 25px;
-      background-color: #4DA8DA;
+      text-decoration: underline;
 }
 
 #Lexer {
@@ -145,7 +145,6 @@ blockquote {
 .dropbtn-under {
     color: white;
     background-color: #12232e;
-    font-size: 16px;
     border: none;
   }
   
