--- a/website/style/style.css
+++ b/website/style/style.css
@@ -90,8 +90,8 @@ blockquote {
 /* Dropdown Button */
 .dropbtn {
     color: white;
-    background-color: #007cc7;
     font-size: 16px;
+    background-color: #007cc7;
     border: none;
   }
   
@@ -113,7 +113,7 @@ blockquote {
   
   /* Links inside the dropdown */
   .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
