--- a/website/style/style.css
+++ b/website/style/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100&display=swap');
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
@@ -8,14 +10,14 @@ pre {
     overflow: scroll;
 }
 
-header {
+/*header {
     padding: 1rem;
     background-color: #007cc7;
     margin-left: -1rem;
     margin-right: -1rem;
-}
+}*/
 
-.nav {
+/*.nav {
     float: right;
 }
 
@@ -36,7 +38,7 @@ header {
 
         .nav ul li a:hover {
             text-decoration: underline;
-        }
+        }*/
 
 .home-btn a {
     color: #fff;
@@ -47,9 +49,8 @@ header {
         text-decoration: underline;
     }
 
-.active {
-    border-radius: 25px;
-    background-color: #4DA8DA;
+#active {
+    text-decoration: underline;
 }
 
 
@@ -63,6 +64,7 @@ header {
 
     .article p {
         padding: 10px;
+        font-family: 'JetBrains Mono', monospace;
     }
 
 .article-doc {
@@ -79,12 +81,17 @@ header {
     
     .article-doc p {
         padding: 10px;
+        font-family: 'JetBrains Mono', monospace;
     }
 
 blockquote {
     border-radius: 10px;
     background-color: #203647;
     padding: 10px;
+}
+blockquote pre {
+    line-height: 150%;
+    letter-spacing: 2px;
 }
 
 /* Dropdown Button */
@@ -213,4 +220,101 @@ p {
 
 #a-in-code {
     color: blueviolet;
+}
+.nav, .menu {
+    display: flex;
+    align-items: center;
+}
+
+.nav {
+    margin: 1rem;
+    position: relative;
+    background-color: #fff;
+    padding: 20px;
+    transition: 0.5s;
+    border-radius: 50px;
+    overflow: hidden;
+    box-shadow: 0 8px 15px rgba(0,0,0,.2);
+}
+
+.menu {
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    width: 0;
+    overflow: scroll;
+    transition: 0.5s;
+}
+
+.nav input:checked ~ .menu {
+    width: 100%;
+}
+
+.menu li {
+    list-style: none;
+    margin: 0 10px;
+}
+
+.menu li a {
+    text-decoration: none;
+    color: #666;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: 0.5s;
+}
+
+.menu li a:hover {
+    color: #161919;
+}
+
+.nav input {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.nav span {
+    position: absolute;
+    left: 30px;
+    width: 30px;
+    height: 4px;
+    border-radius: 50px;
+    background-color: #666;
+    pointer-events: none;
+    transition: 0.5s;
+}
+
+.nav input:checked ~ span {
+    background-color: #f974a1;
+}
+
+.nav span:nth-child(2) {
+    transform: translateY(-8px);
+}
+
+.nav input:checked ~ span:nth-child(2) {
+    transform: translateY(0) rotate(-45deg);
+}
+.nav span:nth-child(3) {
+    transform: translateY(8px);
+}
+
+.nav input:checked ~ span:nth-child(3) {
+    transform: translateY(0) rotate(45deg);
+}
+
+.article-download {
+    text-align: center;
+    padding: 50px 0;
+    border: 1px solid white;
+    border-radius: 25px;
+    margin: 2rem 4rem 2rem 4rem;
+    /*margin-left: auto;
+    margin-right: auto;*/
+}
+
+.function {
+    font-family: 'JetBrains Mono', monospace;
+    font-style:italic;
 }
