--- a/website/style/style.css
+++ b/website/style/style.css
@@ -105,6 +105,8 @@ blockquote pre {
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
+    width: 20%;
+    margin: 0 auto;
     display: inline-block;
   }
   
