--- a/website/style/style.css
+++ b/website/style/style.css
@@ -4,6 +4,9 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
     color: white;
+    /*The following just hides the scrollbar*/
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
 }
 
 pre {
