--- a/website/style/style.css
+++ b/website/style/style.css
@@ -4,13 +4,10 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     scroll-behavior: smooth;
     color: white;
-    /*The following just hides the scrollbar*/
-    -ms-overflow-style: none;
-    overflow: -moz-scrollbars-none;
 }
 
 pre {
-    overflow: scroll;
+    overflow: auto;
 }
 
 /*header {
@@ -247,7 +244,7 @@ p {
     margin: 0;
     padding: 0;
     width: 0;
-    overflow: scroll;
+    overflow: auto;
     transition: 0.5s;
 }
 
